Added Unity MCP and updated docs
  - Add REQUIRMENTS.md with core code features and weights
  - Update AGENTS.md to reference requirements and Unity-integrated MCP
  - Remove invalid .vscode/mcp.json; ignore .vscode/ in .gitignore
  - Update README (primary scene “Start Scene”, trimmed run/build/test)
  - Remove legacy README; align repo info with current structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/.vscode/
-
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
@@ -72,3 +70,16 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Node.js (MCP Server)
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# MCP Unity Server logs
+*.log.txt
+mcp-server.log
+
+# Editor settings (do not track local workspace config)
+.vscode/
